--- a/aldryn_forms/boilerplates/bootstrap3/templates/aldryn_forms/fields/radioselectfield.html
+++ b/aldryn_forms/boilerplates/bootstrap3/templates/aldryn_forms/fields/radioselectfield.html
@@ -1,6 +1,7 @@
 {% load aldryn_forms_tags i18n %}
 
 {% if field %}
+  <div class="form-group{% if field.field.required %} form-required{% endif %}{% if field.errors %} has-error{% endif %}">
     {% block form_field_label %}
         <label class="control-label">
             {{ field.label }}
@@ -13,7 +14,7 @@
     {% for choice in field.field.choices %}
         <div class="radio{% if field.field.required %} form-required{% endif %}{% if field.errors %} has-error{% endif %}">
             {% block form_field %}
-                <label for="{{ field.auto_id }}_{{ choice.0 }}">
+                <label class="option" for="{{ field.auto_id }}_{{ choice.0 }}">
                     <input type="radio" name="{{ field.name }}" id="{{ field.auto_id }}_{{ choice.0 }}" value="{{ choice.0 }}"{% if choice.0|force_text == field.value|force_text %} checked="checked"{% endif %}>
                     {{ choice.1 }}
                 </label>
@@ -21,7 +22,7 @@
             {% block form_field_errors %}
                 {% if field.errors %}
                     {% for error in field.errors %}
-                        <span class="text-danger">{{ error }}</span>
+                        <span class="text-danger pad-left">{{ error }}</span>
                     {% endfor %}
                 {% endif %}
             {% endblock form_field_errors %}
@@ -33,4 +34,5 @@
             <p class="help-block">{{ field.help_text }}</p>
         {% endif %}
     {% endblock form_field_help_text %}
+  </div>
 {% endif %}
