--- a/aldryn_forms/boilerplates/bootstrap3/templates/aldryn_forms/fields/booleanfield.html
+++ b/aldryn_forms/boilerplates/bootstrap3/templates/aldryn_forms/fields/booleanfield.html
@@ -1,6 +1,7 @@
 {% load aldryn_forms_tags i18n %}
 
 {% if field %}
+  <div class="form-group{% if field.field.required %} form-required{% endif %}{% if field.errors %} has-error{% endif %}">
     <div class="checkbox{% if field.field.required %} form-required{% endif %}{% if field.errors %} has-error{% endif %}">
         {% block form_field_label %}
             <label for="{{ field.auto_id }}">
@@ -12,10 +13,13 @@
         {% endblock form_field_label %}
         {% block form_field_errors %}
             {% if field.errors %}
+              <div>
                 {% for error in field.errors %}
                     <span class="text-danger">{{ error }}</span>
                 {% endfor %}
+              </div>
             {% endif %}
         {% endblock form_field_errors %}
     </div>
+  </div>
 {% endif %}
