--- a/aldryn_forms/boilerplates/bootstrap3/templates/aldryn_forms/submit_button.html
+++ b/aldryn_forms/boilerplates/bootstrap3/templates/aldryn_forms/submit_button.html
@@ -1,1 +1,1 @@
-<button type="submit" class="btn btn-default{% if instance.custom_classes %} {{ instance.custom_classes}}{% endif %}">{{ instance.label }}</button>
+<button type="submit" class="btn btn-small btn-theme-color {% if instance.custom_classes %} {{ instance.custom_classes}}{% endif %}">{{ instance.label }}</button>
